fix: alignment of image sources

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -88,7 +88,6 @@ body {
 	flex: 0 0 auto;
 	color: #AAA;
 	margin-right: 1rem;
-	align-self: flex-end;
 }
 
 .teams {
